CiW: working model

--- a/04_callback.ipynb
+++ b/04_callback.ipynb
@@ -80,7 +80,7 @@
     "N_NURSES = 9\n",
     "\n",
     "# default mean inter-arrival time (exp)\n",
-    "MEAN_IAT = 60 / 100\n",
+    "MEAN_IAT = 100.0 / 60.0\n",
     "\n",
     "## default service time parameters (triangular)\n",
     "CALL_LOW = 5.0\n",
@@ -290,11 +290,11 @@
     "    \n",
     "    # operator and nurse waiting times\n",
     "    op_waits = [r.waiting_time for r in recs if r.node==1]\n",
-    "    nurse_waits = [r.waiting_time for r in recs if r.node==1]\n",
+    "    nurse_waits = [r.waiting_time for r in recs if r.node==2]\n",
     "    \n",
     "    # mean measures\n",
     "    run_results['01_mean_waiting_time'] = np.mean(op_waits)\n",
-    "    \n",
+    "        \n",
     "    # end of run results: calculate mean operator utilisation\n",
     "    run_results['02_operator_util'] = \\\n",
     "        (sum(op_servicetimes) / (rc_period * experiment.n_operators)) * 100.0\n",
@@ -308,73 +308,6 @@
     "    \n",
     "    # return the results from the run of the model\n",
     "    return run_results"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "1bde92ab-c010-4fa9-90cf-ebb715537ae9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def single_run(experiment, rc_period=RESULTS_COLLECTION_PERIOD):\n",
-    "#     '''\n",
-    "#     Perform a single run of the model and return the results\n",
-    "    \n",
-    "#     Parameters:\n",
-    "#     -----------\n",
-    "    \n",
-    "#     experiment: Experiment\n",
-    "#         The experiment/paramaters to use with model\n",
-    "#     '''\n",
-    "\n",
-    "#     # results dictionary.  Each KPI is a new entry.\n",
-    "#     run_results = {}\n",
-    "    \n",
-    "#     # reset all results variables to zero and empty\n",
-    "#     experiment.init_results_variables()\n",
-    "    \n",
-    "#     # environment is (re)created inside single run\n",
-    "#     env = simpy.Environment()\n",
-    "\n",
-    "#     # we create simpy resource here - this has to be after we\n",
-    "#     # create the environment object.\n",
-    "#     experiment.operators = simpy.Resource(env, capacity=experiment.n_operators)\n",
-    "    \n",
-    "#     # #########################################################################\n",
-    "#     # MODIFICATION: create the nurses resource\n",
-    "#     experiment.nurses = simpy.Resource(env, capacity=experiment.n_nurses)\n",
-    "#     # #########################################################################\n",
-    "    \n",
-    "#     # we pass the experiment to the arrivals generator\n",
-    "#     env.process(arrivals_generator(env, experiment))\n",
-    "#     env.run(until=rc_period)\n",
-    "\n",
-    "#     # end of run results: calculate mean waiting time\n",
-    "#     run_results['01_mean_waiting_time'] = \\\n",
-    "#         np.mean(experiment.results['waiting_times'])\n",
-    "    \n",
-    "#     # end of run results: calculate mean operator utilisation\n",
-    "#     run_results['02_operator_util'] = \\\n",
-    "#         (experiment.results['total_call_duration'] \\\n",
-    "#          / (rc_period * experiment.n_operators)) * 100.0\n",
-    "    \n",
-    "#     # #########################################################################\n",
-    "#     # MODIFICATION: summary results for nurse process\n",
-    "    \n",
-    "#     # end of run results: nurse waiting time\n",
-    "#     run_results['03_mean_nurse_waiting_time'] = \\\n",
-    "#         np.mean(experiment.results['nurse_waiting_times'])\n",
-    "    \n",
-    "#     # end of run results: calculate mean nurse utilisation\n",
-    "#     run_results['04_nurse_util'] = \\\n",
-    "#         (experiment.results['total_nurse_call_duration'] \\\n",
-    "#          / (rc_period * experiment.n_nurses)) * 100.0\n",
-    "    \n",
-    "#     # #########################################################################\n",
-    "\n",
-    "#     # return the results from the run of the model\n",
-    "#     return run_results"
    ]
   },
   {
@@ -460,38 +393,38 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>32.780730</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>36.287475</td>\n",
+       "      <td>13.495107</td>\n",
+       "      <td>99.017510</td>\n",
+       "      <td>104.118550</td>\n",
+       "      <td>97.769919</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>33.437567</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>36.907791</td>\n",
+       "      <td>5.266062</td>\n",
+       "      <td>94.959007</td>\n",
+       "      <td>70.999287</td>\n",
+       "      <td>97.773163</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>32.598504</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>39.734405</td>\n",
+       "      <td>2.003032</td>\n",
+       "      <td>92.373545</td>\n",
+       "      <td>57.656184</td>\n",
+       "      <td>97.434894</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>34.627942</td>\n",
-       "      <td>0.000000</td>\n",
-       "      <td>40.775007</td>\n",
+       "      <td>15.572876</td>\n",
+       "      <td>96.574040</td>\n",
+       "      <td>66.652980</td>\n",
+       "      <td>94.837456</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.000724</td>\n",
-       "      <td>34.926230</td>\n",
-       "      <td>0.000724</td>\n",
-       "      <td>40.960212</td>\n",
+       "      <td>1.247898</td>\n",
+       "      <td>90.164542</td>\n",
+       "      <td>36.261146</td>\n",
+       "      <td>96.465707</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -500,19 +433,19 @@
       "text/plain": [
        "     01_mean_waiting_time  02_operator_util  03_mean_nurse_waiting_time  \\\n",
        "rep                                                                       \n",
-       "1                0.000000         32.780730                    0.000000   \n",
-       "2                0.000000         33.437567                    0.000000   \n",
-       "3                0.000000         32.598504                    0.000000   \n",
-       "4                0.000000         34.627942                    0.000000   \n",
-       "5                0.000724         34.926230                    0.000724   \n",
+       "1               13.495107         99.017510                  104.118550   \n",
+       "2                5.266062         94.959007                   70.999287   \n",
+       "3                2.003032         92.373545                   57.656184   \n",
+       "4               15.572876         96.574040                   66.652980   \n",
+       "5                1.247898         90.164542                   36.261146   \n",
        "\n",
        "     04_nurse_util  \n",
        "rep                 \n",
-       "1        36.287475  \n",
-       "2        36.907791  \n",
-       "3        39.734405  \n",
-       "4        40.775007  \n",
-       "5        40.960212  "
+       "1        97.769919  \n",
+       "2        97.773163  \n",
+       "3        97.434894  \n",
+       "4        94.837456  \n",
+       "5        96.465707  "
       ]
      },
      "execution_count": 8,
@@ -575,7 +508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "id": "2957de2b-c0cf-4eab-a639-0058c8c56326",
    "metadata": {},
    "outputs": [],
@@ -601,7 +534,7 @@
     "    for exp_name, experiment in experiments.items():\n",
     "        \n",
     "        print(f'Running {exp_name}', end=' => ')\n",
-    "        results = multiple_replications(experiment, rc_period, n_reps=100)\n",
+    "        results = multiple_replications(experiment, rc_period)\n",
     "        print('done.\\n')\n",
     "        \n",
     "        #save the results\n",
@@ -616,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 15,
    "id": "1fa0335d-18c6-463b-92f9-f8f83ef535c3",
    "metadata": {},
    "outputs": [
@@ -645,12 +578,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 16,
    "id": "e3ce2f62-7cb9-48eb-8e75-09f75e4fe3ee",
    "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    },
     "tags": []
    },
    "outputs": [],
@@ -681,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 17,
    "id": "d8cf0ab2-0832-4961-ba1f-68948c568bf0",
    "metadata": {},
    "outputs": [
@@ -713,23 +643,23 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>01_mean_waiting_time</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>3.99</td>\n",
+       "      <td>1.12</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>02_operator_util</th>\n",
-       "      <td>33.36</td>\n",
-       "      <td>31.27</td>\n",
+       "      <td>93.65</td>\n",
+       "      <td>84.55</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>03_mean_nurse_waiting_time</th>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>43.60</td>\n",
+       "      <td>58.98</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>04_nurse_util</th>\n",
-       "      <td>38.80</td>\n",
-       "      <td>39.15</td>\n",
+       "      <td>96.84</td>\n",
+       "      <td>97.15</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -737,13 +667,13 @@
       ],
       "text/plain": [
        "                             base  operators+1\n",
-       "01_mean_waiting_time         0.00         0.00\n",
-       "02_operator_util            33.36        31.27\n",
-       "03_mean_nurse_waiting_time   0.00         0.00\n",
-       "04_nurse_util               38.80        39.15"
+       "01_mean_waiting_time         3.99         1.12\n",
+       "02_operator_util            93.65        84.55\n",
+       "03_mean_nurse_waiting_time  43.60        58.98\n",
+       "04_nurse_util               96.84        97.15"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -754,14 +684,6 @@
     "summary_frame = experiment_summary_frame(experiment_results)\n",
     "summary_frame.round(2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "744ad257-9946-4125-80a6-5b7741268ebb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
